docs: add LLM optimization files for AI code assistant discoverability

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ coverage.xml
 testresults.xml
 .azureconnstr
 
+# Test executables
+*.test.exe
+
 # Example binaries  
 examples/*/simple
 examples/*/azuread-service-principal
