--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,20 @@
 *.log
 *.swp
 *~
+
+# Coverage artifacts
 coverage.json
 coverage.txt
 coverage.xml
+coverage.out
+*.out
+coverage/
+cov/
+cov*
+integ_cov*
+final.out
+coverage_all.txt
+
 testresults.xml
 .azureconnstr
 
